fix(Server auth): corresponding return header as requested (#107)
