# server/internal/models/users.go
@@ -7,7 +7,8 @@ import (
 type User struct {
 	gorm.Model
 	Email    string `gorm:"unique;not null" json:"email" binding:"required"`
+	Username string `gorm:"unique;not null" json:"username" binding:"required"`
 	Password string `gorm:"not null" json:"password" binding:"required"`
 	Salt     string `gorm:"not null" json:"salt"`
-	Token    string `gorm:"not null" json:"token"`
+	Token    string `gorm:"not null" json:"jwt"`
 }
